bad/incr_var_bool.example_compiler_output
ERROR
[1mbad/incr_var_bool.lat:5:3: [1;31merror: [0;1m++ operator is valid only for integer values not `boolean`[m
	x++;
	 [1;32m^[m
